# F1-2022-telemetry-rust

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  packets.rs  server.rs
src/event_system/: mod.rs
src/models/: car_damage.rs  car_setup.rs  car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  mod.rs  motion.rs  participant.rs  session.rs  session_history.rs  vector3d.rs  wheels_vector.rs
src/models/enums/: driver_status.rs  dynamic_racing_line.rs  ers_mode.rs  fuel_mix.rs  gamemode.rs  gear_box_assist.rs  infringement_types.rs  mdf_panel.rs  mod.rs  network_game.rs  penalty_type.rs  pit_status.rs  ready_status.rs  result_status.rs  ruleset.rs  safety_car_status.rs  sector.rs  session_length.rs  session_type.rs  surface_type.rs  team.rs  traction_control_status.rs  tyre_compound.rs  vehicle_fia_flags.rs  weather.rs  zone_flag.rs
src/models/traits/: mod.rs  packet.rs
src/models/types/: mod.rs  valid_laps.rs
