[package]
name = "c"
version = "0.1.0"
edition = "2021"
exclude = [".idea/", "target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num-traits = "0.2"
num-derive = "0.2"
proc-macro2 = "1.0.47"
bytebuffer = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }